--- a/app/css/main.css
+++ b/app/css/main.css
@@ -17,8 +17,8 @@
  */
 
 body {
-  text-shadow: 0 .05rem .1rem rgba(255, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(255, 0, 0, .5);
+  text-shadow: 0 .05rem .1rem rgba(50, 80, 150, 0.5);
+  box-shadow: inset 0 0 15rem rgba(50, 80, 150, 0.5);
 }
 
 html {
@@ -36,8 +36,8 @@ a {
   border-bottom: .25rem solid transparent;
 }
 a:hover {
-  color: rgba(255, 50, 50, .8); /* Link color */
-  border-bottom-color: rgba(255, 50, 50, .25);
+  color: rgba(50, 50, 250, .8); /* Link color */
+  border-bottom-color: rgba(150, 150, 200, .5);
 }
 
 
@@ -46,13 +46,14 @@ a:hover {
  */
 
 .nav-masthead .nav-link {
-  color: rgba(255, 255, 255, .5);
+  color: rgba(155, 255, 255, .5);
   border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 50, 50, .25);
+  color: rgba(255, 255, 255, .75);
+  border-bottom-color: rgba(150, 150, 200, .5);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -76,7 +77,7 @@ a:hover {
 .main-page-link:hover,
 .main-page-link:focus {
   /* color: rgba(255, 50, 50, .25); */
-  border-bottom-color: rgba(255, 50, 50, .25);
+  border-bottom-color: rgba(150, 150, 200, 0.5);
 }
 
 .main-page-link .active {
